# python-docker-sample

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
python_docker_sample/: __init__.py  app.py
